--- a/src/components/Track/Track.css
+++ b/src/components/Track/Track.css
@@ -33,10 +33,11 @@
 }
 
 .Track-action {
-  width: 35px;
-  height: 35px;
+  width: 50px;
+  height: 50px;
   border-radius: 10px;
   position: absolute;
-  top: 70%;
-  left: 70%;
+  top: 80%;
+  left: 80%;
+  font-size: 20px;
 }
