--- a/src/index.css
+++ b/src/index.css
@@ -461,8 +461,7 @@ button:disabled,
     opacity: 0.7;
 }
 
-button:disabled,
-.button-primary:disabled {
+button:disabled, .button-primary:disabled {
     .button-disabled {
         background: var(--color-main);
         color: var(--color-paragraph);
