--- a/src/index.css
+++ b/src/index.css
@@ -330,7 +330,7 @@
 @media (max-width: 900px) {
     .AppMain {
         max-width: 100%;
-        padding: 16px 4px 16px 4px;
+        padding: 16px;
     }
     .AppSection {
         padding: 16px;
