--- a/src/index.css
+++ b/src/index.css
@@ -87,8 +87,8 @@
     box-shadow: 0 2px 8px rgba(245, 130, 174, 0.04);
     display: flex;
     flex-direction: column;
-    align-items: center;
-    justify-content: center;
+    align-items: flex-start;
+    justify-content: flex-start;
 }
 
 .SearchBar-form {
